<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_3d"
            android:elevation="8dp">
            <!-- Title Bar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:background="@color/blue_sapphire">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:contentDescription="Back"
                    android:id="@+id/back_profile"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PROFILE"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp" />
            </LinearLayout>
        </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/background_3d"
                app:cardBackgroundColor="@color/blue_sapphire"
                android:elevation="20dp"
                android:layout_gravity="center"
                android:padding="20dp"
                app:cardElevation="12dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="@color/blue1">

            <!-- Profile Image -->
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_placeholder" />

            <!-- Edit Profile Picture Icon -->
            <ImageButton
                android:id="@+id/edit_profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@id/profile_image"
                android:layout_alignEnd="@id/profile_image"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edit_profile"
                android:src="@drawable/ic_baseline_edit_24" />

            <!-- Name Label -->
            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_marginTop="24dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Name Display -->
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_label"
                android:layout_marginTop="4dp"
                android:text="@string/name"
                android:textColor="@color/dark_gray"
                android:textSize="18sp" />

            <!-- ID Label -->
            <TextView
                android:id="@+id/id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="24dp"
                android:text="@string/ID"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Name Display -->
            <TextView
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_label"
                android:layout_marginTop="4dp"
                android:text="@string/ID"
                android:textColor="@color/dark_gray"
                android:textSize="18sp" />

            <!-- Email Label -->
            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/id"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Email Display -->
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_label"
                android:layout_marginTop="4dp"
                android:text="@string/email"
                android:textColor="@color/dark_gray"
                android:textSize="18sp" />

            <!-- Phone Label -->
            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Phone Display -->
            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_label"
                android:layout_marginTop="4dp"
                android:text="@string/phone"
                android:textColor="@color/dark_gray"
                android:textSize="18sp" />

        </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</FrameLayout>